tests/rosetta/out/Smalltalk/call-a-function-9.out
Object: Array new: 2 "<0x7f668082fd90>" error: Invalid index 0: index out of range
SystemExceptions.IndexOutOfRange(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.IndexOutOfRange class>>signalOn:withIndex: (SysExcept.st:660)
Array(Object)>>checkIndexableBounds: (Object.st:796)
Array(Object)>>at: (Object.st:858)
optimized [] in UndefinedObject>>executeStatements (/tmp/call-a-function-9.st:8)
UndefinedObject>>executeStatements (/tmp/call-a-function-9.st:20)
