tests/rosetta/out/Smalltalk/call-a-function-9.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| f g h main ab a b cb d e i list |
f := [ {0. 0}. ].
g := [:a :b | 0. ].
h := [:s :nums |  ].
main := [ ab := f value.
a := ab at: 0.
b := ab at: 1.
cb := f value at: 1.
d := g value: a value: cb.
e := g value: d value: b.
i := g value: d value: 2.
list := {}.
list := list copyWith: a.
list := list copyWith: d.
list := list copyWith: e.
list := list copyWith: i.
i := (list size). ].
main value.
